Fix ticket #1254: TileView is broken in IE6. This adds position: relative; to tiles and removes the unsupported transparent border from tiles.
svn commit r19721

--- a/www/styles/swat-tile-view.css
+++ b/www/styles/swat-tile-view.css
@@ -5,7 +5,7 @@
 	margin: 5px 10px;
 	float: left;
 	text-align: center;
-	border: 1px solid transparent;
+	position: relative;
 }
 
 .swat-tile-view .swat-check-all {
